Add PracticalBoundsCheck filter and test

--- a/src/ufo/filters/CMakeLists.txt
+++ b/src/ufo/filters/CMakeLists.txt
@@ -77,6 +77,8 @@ set ( filters_files
       PoissonDiskThinningParameters.h
       processWhere.cc
       processWhere.h
+      PracticalBoundsCheck.cc
+      PracticalBoundsCheck.h
       actions/AssignError.cc
       actions/AssignError.h
       actions/FilterAction.cc
